Add: run multiple transfer learning cases per trained network. Updated figure styles in _ana.

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -844,132 +844,142 @@
         "    ###############################\n",
         "    #### Second phase of training\n",
         "    ###############################\n",
-        "    print('**********************START TRANSFER TRAINING')\n",
         "    \n",
-        "    # Init memory to save responses\n",
-        "    resp_saveind = 0\n",
-        "    if par.saveFlag_RESP:\n",
-        "        outRESP = []\n",
-        "        for layer in range(par.maxLayer+1,len(MOD.Ns)):\n",
-        "            outRESP.append(np.zeros((len(par.saveRespAtN)+1, par.nClass * par.nSaveSamples, par.Ns[layer], tMax))) \n",
+        "    ### Init lists for saving data\n",
+        "    outL_tr = []\n",
+        "    outA_trTa = []\n",
+        "    outA_trClCe = []\n",
+        "    outL_val = []\n",
+        "    outA_valTa = []\n",
+        "    outA_valClCe = []\n",
         "\n",
-        "    ### Reset output layer weights\n",
-        "    MOD.Ws[-1] = nn.Parameter((torch.randn([MOD.Ns[-2],MOD.Ns[-1]])/torch.sqrt(torch.tensor(MOD.Ns[-2]+MOD.Ns[-1]))).to(device))\n",
-        "    MOD.bs[-1] = nn.Parameter(torch.zeros([MOD.Ns[-1]]).to(device))\n",
-        "\n",
-        "    ### Init memory for saving data\n",
-        "    outL_tr=np.zeros([par.nEpisodesOut])\n",
-        "    outA_trTa=np.zeros([par.nEpisodesOut])\n",
-        "    outA_trClCe=np.zeros([par.nEpisodesOut])\n",
-        "    outL_val=np.zeros([par.nEpisodesOut])\n",
-        "    outA_valTa=np.zeros([par.nEpisodesOut])\n",
-        "    outA_valClCe=np.zeros([par.nEpisodesOut])\n",
-        "\n",
-        "    MOD.maxLayer = len(MOD.Ns)-1\n",
-        "    MOD.lossLayer = MOD.maxLayer\n",
-        "\n",
-        "    ### Initialise optimiser\n",
-        "    MOD.transferOptimiser()\n",
-        "    \n",
-        "    t=time.time()\n",
-        "\n",
-        "    for n in range(par.nEpisodesOut):\n",
-        "        ### Save output responses before updates\n",
-        "        if par.saveFlag_RESP and (np.any(np.isin(n, par.saveRespAtN)) or n==(par.nEpisodesOut-1)):\n",
-        "            print(f'Saving response on iteration {n} of {par.nEpisodesOut}')\n",
-        "            with torch.no_grad():\n",
-        "                s = X_tr[0][0:par.nSaveSamples,:]\n",
-        "                for k in range(1,par.nClass):\n",
-        "                    s = torch.concat([s, X_tr[k][0:par.nSaveSamples,:]],0)\n",
-        "                resp = MOD.responseSave(s, range(par.maxLayer+1,len(par.Ns)))\n",
-        "                for li, l in enumerate(range(par.maxLayer+1,len(par.Ns))):\n",
-        "                    outRESP[li][resp_saveind,:,:,:] = resp[li].numpy()\n",
-        "            resp_saveind += 1\n",
-        "\n",
-        "        ### Training data\n",
-        "        # Prepare batch\n",
-        "        rand_ind=np.random.randint(0,X_tr[0].size()[0],(MOD.nSampPerClassPerBatch,))\n",
-        "        Im=X_tr[0][rand_ind,:]\n",
-        "        for k in range(1,par.nClass):\n",
-        "            rand_ind=np.random.randint(0,X_tr[k].size()[0],(MOD.nSampPerClassPerBatch,))\n",
-        "            Im=torch.concat([Im,X_tr[k][rand_ind,:]],0)\n",
-        "\n",
-        "        # Get response to input\n",
-        "        MOD.response(Im)\n",
-        "        # Compute training loss and accuracy\n",
-        "        loss, accTrTa, accClCe = MOD.getLossAccuracy(backwardFlag=True, opt=MOD.tranOpt)\n",
+        "    for m in range(par.nTransferRuns):\n",
+        "        print(f'**********************START TRANSFER TRAINING {m+1} of {par.nTransferRuns}')\n",
         "        \n",
-        "        # print(f'mean gradient is {torch.mean(MOD.Ws[-1].grad)}')\n",
-        "        #####\n",
-        "        ##### CHECKING FOR NANS\n",
-        "        # if torch.any(torch.isnan(MOD.x[-1])):\n",
-        "        #     print(f'Quitting at batch {n} of {par.nEpisodesOut}')\n",
-        "        #     return -1\n",
-        "        #####\n",
-        "        #####\n",
+        "        # Init memory to save responses\n",
+        "        resp_saveind = 0\n",
+        "        if par.saveFlag_RESP:\n",
+        "            outRESP = []\n",
+        "            for layer in range(par.maxLayer+1,len(MOD.Ns)):\n",
+        "                outRESP.append(np.zeros((len(par.saveRespAtN)+1, par.nClass * par.nSaveSamples, par.Ns[layer], tMax))) \n",
         "\n",
-        "        # Store loss and accuracy\n",
-        "        outL_tr[n]=np.copy(np.array(loss.to('cpu').detach()))\n",
-        "        outA_trTa[n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
-        "        outA_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
+        "        ### Reset output layer weights\n",
+        "        MOD.Ws[-1] = nn.Parameter((torch.randn([MOD.Ns[-2],MOD.Ns[-1]])/torch.sqrt(torch.tensor(MOD.Ns[-2]+MOD.Ns[-1]))).to(device))\n",
+        "        MOD.bs[-1] = nn.Parameter(torch.zeros([MOD.Ns[-1]]).to(device))\n",
+        "\n",
+        "        ### Init memory for saving data\n",
+        "        outL_tr.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outA_trTa.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outA_trClCe.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outL_val.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outA_valTa.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outA_valClCe.append(np.zeros([par.nEpisodesOut]))\n",
+        "\n",
+        "        MOD.maxLayer = len(MOD.Ns)-1\n",
+        "        MOD.lossLayer = MOD.maxLayer\n",
+        "\n",
+        "        ### Initialise optimiser\n",
+        "        MOD.transferOptimiser()\n",
         "        \n",
-        "        # # Print delta_W for multiple layers\n",
-        "        # if (n%save_every)<1:\n",
-        "        #     with torch.no_grad():\n",
-        "        #         # Save before weights\n",
-        "        #         w1 = []\n",
-        "        #         for k in range(par.maxLayer):\n",
-        "        #             w1.append(torch.clone(MOD.Ws[k].data))\n",
-        "        #         if par.fbLayer:\n",
-        "        #             w1.append(torch.clone(MOD.W_fb.data))\n",
-        "        # if ((n-1)%save_every)<1:\n",
-        "        #     with torch.no_grad():\n",
-        "        #         # Save after weights\n",
-        "        #         w2 = []\n",
-        "        #         for k in range(par.maxLayer):\n",
-        "        #             w2.append(torch.clone(MOD.Ws[k].data))\n",
-        "        #         if par.fbLayer:\n",
-        "        #             w2.append(torch.clone(MOD.W_fb.data))\n",
-        "        #         # Compute weight change\n",
-        "        #         for k in range(len(w1)):\n",
-        "        #             dw = torch.abs(torch.subtract(w2[k],w1[k])).cpu()\n",
-        "        #             print(f'Max dW[{k}] = {dw[k].max()}')\n",
-        "            \n",
-        "        ### Validation data\n",
-        "        with torch.no_grad():\n",
+        "        t=time.time()\n",
+        "\n",
+        "        for n in range(par.nEpisodesOut):\n",
+        "            ### Save output responses before updates\n",
+        "            if par.saveFlag_RESP and (np.any(np.isin(n, par.saveRespAtN)) or n==(par.nEpisodesOut-1)):\n",
+        "                print(f'Saving response on iteration {n} of {par.nEpisodesOut}')\n",
+        "                with torch.no_grad():\n",
+        "                    s = X_tr[0][0:par.nSaveSamples,:]\n",
+        "                    for k in range(1,par.nClass):\n",
+        "                        s = torch.concat([s, X_tr[k][0:par.nSaveSamples,:]],0)\n",
+        "                    resp = MOD.responseSave(s, range(par.maxLayer+1,len(par.Ns)))\n",
+        "                    for li, l in enumerate(range(par.maxLayer+1,len(par.Ns))):\n",
+        "                        outRESP[li][resp_saveind,:,:,:] = resp[li].numpy()\n",
+        "                resp_saveind += 1\n",
+        "\n",
+        "            ### Training data\n",
         "            # Prepare batch\n",
-        "            rand_ind=np.random.randint(0,X_val[0].size()[0],(int(par.batch_size/par.nClass),))\n",
-        "            Im=X_val[0][rand_ind,:]\n",
-        "            Y=Y_val[0][rand_ind,:]\n",
+        "            rand_ind=np.random.randint(0,X_tr[0].size()[0],(MOD.nSampPerClassPerBatch,))\n",
+        "            Im=X_tr[0][rand_ind,:]\n",
         "            for k in range(1,par.nClass):\n",
-        "                rand_ind=np.random.randint(0,X_val[k].size()[0],(int(par.batch_size/par.nClass),))\n",
-        "                Im=torch.concat([Im,X_val[k][rand_ind,:]],0)\n",
-        "            \n",
+        "                rand_ind=np.random.randint(0,X_tr[k].size()[0],(MOD.nSampPerClassPerBatch,))\n",
+        "                Im=torch.concat([Im,X_tr[k][rand_ind,:]],0)\n",
+        "\n",
         "            # Get response to input\n",
-        "            MOD.response(Im)    \n",
-        "            # Compute validation loss and accuracy\n",
-        "            loss,accValTa,accValClCe = MOD.getLossAccuracy()\n",
+        "            MOD.response(Im)\n",
+        "            # Compute training loss and accuracy\n",
+        "            loss, accTrTa, accClCe = MOD.getLossAccuracy(backwardFlag=True, opt=MOD.tranOpt)\n",
+        "            \n",
+        "            # print(f'mean gradient is {torch.mean(MOD.Ws[-1].grad)}')\n",
+        "            #####\n",
+        "            ##### CHECKING FOR NANS\n",
+        "            # if torch.any(torch.isnan(MOD.x[-1])):\n",
+        "            #     print(f'Quitting at batch {n} of {par.nEpisodesOut}')\n",
+        "            #     return -1\n",
+        "            #####\n",
+        "            #####\n",
         "\n",
         "            # Store loss and accuracy\n",
-        "            outL_val[n] = np.copy(np.array(loss.to('cpu').detach()))\n",
-        "            outA_valTa[n] = np.copy(np.array(accValTa.to('cpu').detach()))\n",
-        "            outA_valClCe[n] = np.copy(np.array(accValClCe.to('cpu').detach()))\n",
-        "\n",
-        "        # Update learning rate\n",
-        "        MOD.tranOpt.param_groups[0]['lr'] = par.etaTransfer * np.exp(-float(n)/par.eta_tau)\n",
-        "\n",
-        "        if (n%par.reportTime==0) and (n>0):\n",
-        "            print(f'Time per stage: {time.time()-t}')\n",
-        "            mseTr_mean=np.mean(outL_tr[n-par.reportTime:n])\n",
-        "            accTrTa_mean=np.mean(outA_trTa[n-par.reportTime:n])\n",
-        "            accTrClCe_mean=np.mean(outA_trClCe[n-par.reportTime:n])\n",
-        "            mseVal_mean=np.mean(outL_val[n-par.reportTime:n])\n",
-        "            accValTa_mean=np.mean(outA_valTa[n-par.reportTime:n])\n",
-        "            accValClCe_mean=np.mean(outA_valClCe[n-par.reportTime:n])\n",
-        "            t=time.time()\n",
+        "            outL_tr[m][n]=np.copy(np.array(loss.to('cpu').detach()))\n",
+        "            outA_trTa[m][n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
+        "            outA_trClCe[m][n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
         "            \n",
-        "            print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
-        "            print(f'Progress:                                                                                           Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
+        "            # # Print delta_W for multiple layers\n",
+        "            # if (n%save_every)<1:\n",
+        "            #     with torch.no_grad():\n",
+        "            #         # Save before weights\n",
+        "            #         w1 = []\n",
+        "            #         for k in range(par.maxLayer):\n",
+        "            #             w1.append(torch.clone(MOD.Ws[k].data))\n",
+        "            #         if par.fbLayer:\n",
+        "            #             w1.append(torch.clone(MOD.W_fb.data))\n",
+        "            # if ((n-1)%save_every)<1:\n",
+        "            #     with torch.no_grad():\n",
+        "            #         # Save after weights\n",
+        "            #         w2 = []\n",
+        "            #         for k in range(par.maxLayer):\n",
+        "            #             w2.append(torch.clone(MOD.Ws[k].data))\n",
+        "            #         if par.fbLayer:\n",
+        "            #             w2.append(torch.clone(MOD.W_fb.data))\n",
+        "            #         # Compute weight change\n",
+        "            #         for k in range(len(w1)):\n",
+        "            #             dw = torch.abs(torch.subtract(w2[k],w1[k])).cpu()\n",
+        "            #             print(f'Max dW[{k}] = {dw[k].max()}')\n",
+        "                \n",
+        "            ### Validation data\n",
+        "            with torch.no_grad():\n",
+        "                # Prepare batch\n",
+        "                rand_ind=np.random.randint(0,X_val[0].size()[0],(int(par.batch_size/par.nClass),))\n",
+        "                Im=X_val[0][rand_ind,:]\n",
+        "                Y=Y_val[0][rand_ind,:]\n",
+        "                for k in range(1,par.nClass):\n",
+        "                    rand_ind=np.random.randint(0,X_val[k].size()[0],(int(par.batch_size/par.nClass),))\n",
+        "                    Im=torch.concat([Im,X_val[k][rand_ind,:]],0)\n",
+        "                \n",
+        "                # Get response to input\n",
+        "                MOD.response(Im)    \n",
+        "                # Compute validation loss and accuracy\n",
+        "                loss,accValTa,accValClCe = MOD.getLossAccuracy()\n",
+        "\n",
+        "                # Store loss and accuracy\n",
+        "                outL_val[m][n] = np.copy(np.array(loss.to('cpu').detach()))\n",
+        "                outA_valTa[m][n] = np.copy(np.array(accValTa.to('cpu').detach()))\n",
+        "                outA_valClCe[m][n] = np.copy(np.array(accValClCe.to('cpu').detach()))\n",
+        "\n",
+        "            # Update learning rate\n",
+        "            MOD.tranOpt.param_groups[0]['lr'] = par.etaTransfer * np.exp(-float(n)/par.eta_tau)\n",
+        "\n",
+        "            if (n%par.reportTime==0) and (n>0):\n",
+        "                print(f'Time per stage: {time.time()-t}')\n",
+        "                mseTr_mean=np.mean(outL_tr[n-par.reportTime:n])\n",
+        "                accTrTa_mean=np.mean(outA_trTa[n-par.reportTime:n])\n",
+        "                accTrClCe_mean=np.mean(outA_trClCe[n-par.reportTime:n])\n",
+        "                mseVal_mean=np.mean(outL_val[n-par.reportTime:n])\n",
+        "                accValTa_mean=np.mean(outA_valTa[n-par.reportTime:n])\n",
+        "                accValClCe_mean=np.mean(outA_valClCe[n-par.reportTime:n])\n",
+        "                t=time.time()\n",
+        "                \n",
+        "                print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
+        "                print(f'Progress:                                                                                           Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
         "\n",
         "    ### Save outputs\n",
         "    torch.save(L_tr, outputDir + '/' + 'lossTr'+str(rngSeed)+'.pt')\n",
@@ -1802,6 +1812,52 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "id": "04ddc697",
+      "metadata": {},
+      "source": [
+        "### Run multiple cases of transfer learning per trained network, to investigate whether performance is hindered by getting stuck in local minima."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b87f370f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### Define parameters\n",
+        "swLR = np.logspace(-5,-7/3,7) # LRs used for sweep above\n",
+        "swLR = [swLR[4]]\n",
+        "nSeeds = 1 # No. runs per hyperparameter\n",
+        "\n",
+        "seeds = list(sp.primerange(11111,33333))[0:nSeeds] # RNG seeds\n",
+        "\n",
+        "complete = torch.zeros((len(swLR), len(seeds)))\n",
+        "for k, sd in enumerate(seeds):\n",
+        "    t = time.time()\n",
+        "    # Update hyperparameter\n",
+        "    importlib.reload(par)\n",
+        "    par.saveFlag_FBWeights = True\n",
+        "    par.maxLayer = 3\n",
+        "    par.lossLayer = 3\n",
+        "    par.nSaveMaxT = par.nEpochs \n",
+        "    par.etaInitial = swLR[0]\n",
+        "    par.fbLayer = 2\n",
+        "    par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
+        "    par.nTransferRuns = 5\n",
+        "    expName = 'FB2_LocMin'\n",
+        "    complete[j, k] = xent_esn_fb(expName, sd)\n",
+        "    print(f'k={k}/{len(seeds)}')\n",
+        "    print(f'*************************FB2_LocMin Run time: {time.time()-t}')\n",
+        "completeName = directory+'/data/FB2_LocMin/complete.pt'\n",
+        "torch.save(complete, completeName)\n",
+        "\n",
+        "print('*******************************FINISHED FB2********************************')\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "id": "19b65aae",
       "metadata": {
         "id": "19b65aae"
@@ -2150,9 +2206,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python [conda env:venv] *",
+      "display_name": "venv",
       "language": "python",
-      "name": "conda-env-venv-py"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
