--- a/esn_feedback_ana.ipynb
+++ b/esn_feedback_ana.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "        return data\n",
     "    \n",
-    "    ### Plot accuracies\n",
+    "    ### Plot accuracies as error (1 - accuracy)\n",
     "    if key=='plotAcc':\n",
     "        # kwa needs: acc, saveFlag, figDir, figName\n",
     "        mu.setupMatplotlib()\n",
@@ -61,8 +61,9 @@
     "        for j in range(n):\n",
     "            col = tuple(np.sqrt(colShade[j]**2 * col2 + colShade[n-1-j]**2 * col1))\n",
     "            if np.size(acc[j])>0:\n",
-    "                pl.plot(np.linspace(1,nEpochs,nEpochs),np.convolve(np.pad(np.mean(acc[j],1), (50,50), mode='edge'),kernel,mode='same')[50:-50], linewidth=1.0, color=col)\n",
-    "        ax.xaxis.set_ticks((0,nEpochs)); ax.yaxis.set_ticks((0,1))\n",
+    "                pl.plot(np.linspace(1,nEpochs,nEpochs),1. - np.convolve(np.pad(np.mean(acc[j],1), (50,50), mode='edge'),kernel,mode='same')[50:-50], linewidth=1.0, color=col)\n",
+    "        ax.xaxis.set_ticks((0,nEpochs)); ax.set_yscale('log'); ax.yaxis.set_ticks([0.02,0.05,0.2,0.5]); ax.set_ylim(ymin=0.02, ymax=0.5)\n",
+    "        ax.get_yaxis().set_major_formatter(mpl.ticker.ScalarFormatter())\n",
     "        if kwa['saveFlag']:\n",
     "            mu.checkMakeDir(kwa['figDir'])\n",
     "            pl.savefig(kwa['figDir']+'/'+kwa['figName']+'.svg', format=\"svg\")\n",
@@ -256,21 +257,23 @@
     "        \n",
     "    ### Plot all mean SIs\n",
     "    if key=='plotAllSI':\n",
-    "        # kwa needs: si, figDir, prefix\n",
+    "        # kwa needs: si, figDir, layer, prefix\n",
     "        si = kwa['si']\n",
     "        mSI = np.mean(si,axis=1)\n",
     "        sSI = np.std(si, axis=1)\n",
+    "        col1 = (0.5,0,0,0.33) if kwa['layer']==2 else (0,0,0,0.33)\n",
+    "        col2 = (0.5,0,0,1) if kwa['layer']==2 else (0,0,0,1)\n",
     "        mu.setupMatplotlib()\n",
     "        fig = pl.figure(figsize=tuple(np.array((4.,4.))/2.54)); ax = pl.axes()\n",
     "        ax.spines[['top','right']].set_visible(False)\n",
     "        for j in range(si.shape[0]):\n",
-    "            pl.scatter(j+np.random.uniform(-0.25,0.25,(si.shape[1],1)), si[j,:], c=(0., 0., 0., 0.33), s=3)\n",
-    "        pl.errorbar(list(range(3)), mSI, yerr=sSI, fmt='o', color='k', markersize=3)\n",
-    "        ax.xaxis.set_ticks(list(range(3))); ax.yaxis.set_ticks((-1,0,1))\n",
-    "        ax.set_xlim(xmin=-0.5, xmax=2.5); ax.set_ylim(ymin=-1, ymax=1)\n",
+    "            pl.scatter(j+np.random.uniform(-0.25,0.25,(si.shape[1],1)), si[j,:], c=col1, s=3, edgecolors='none')\n",
+    "        pl.errorbar(list(range(3)), mSI, yerr=sSI, fmt='o', color=col2, markersize=3, markeredgecolor='none')\n",
+    "        ax.xaxis.set_ticks(list(range(3))); ax.yaxis.set_ticks([0.1,0.4,0.7])\n",
+    "        ax.set_xlim(xmin=-0.5, xmax=2.5); ax.set_ylim(ymin=0.1, ymax=0.7)\n",
     "        if kwa['saveFlag']:\n",
     "            mu.checkMakeDir(kwa['figDir'])\n",
-    "            pl.savefig(kwa['figDir']+'/allSI'+kwa['prefix']+'.svg', format=\"svg\")\n",
+    "            pl.savefig(kwa['figDir']+'/allSI'+kwa['prefix']+'_L'+str(kwa['layer'])+'_'+'.svg', format=\"svg\")\n",
     "\n",
     "    ### Plot histograms of DW (weight changes)\n",
     "    if key=='plotDW':\n",
@@ -342,7 +345,8 @@
     "            if len(mode)>0:\n",
     "                col = tuple(np.sqrt(colShade[j]**2 * col2 + colShade[nLR-1-j]**2 * col1)) # set colour for this learning rate\n",
     "                pl.plot(np.linspace(0,par.nEpochs,25), mode, linewidth=1.0, color=col)\n",
-    "        pl.yscale('log'); ax.xaxis.set_ticks([0,5000]); ax.set_ylim(ymin=dwEdges[0], ymax=dwEdges[-1])\n",
+    "        pl.yscale('log'); ax.yaxis.set_ticks([1e-7,1e-5,1e-3]); ax.yaxis.set_ticklabels(['$10^{-7}$','$10^{-5}$','$10^{-3}$']); ax.xaxis.set_ticks([0,5000]); ax.set_ylim(ymin=1e-7, ymax=dwEdges[-1])\n",
+    "        # ax.get_yaxis().set_major_formatter(mpl.ticker.ScalarFormatter())\n",
     "        if kwa['saveFlag']:\n",
     "            mu.checkMakeDir(kwa['figDir'])\n",
     "            pl.savefig(kwa['figDir']+'/dwModeEvo_'+kwa['modName']+'.svg', format=\"svg\")\n",
@@ -371,11 +375,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = 'metFB2'\n",
+    "model = 'proFB2'\n",
     "experiment = 'swLR'\n",
     "key = 'loadData'; dataName = 'out_accValTa'\n",
     "acc = esn_feedback_ana(key,modName=model,expName=experiment,dataName=dataName)\n",
-    "key = 'plotAcc'; saveFlag = False; \n",
+    "key = 'plotAcc'; saveFlag = True; \n",
     "esn_feedback_ana(key,acc=acc,saveFlag=saveFlag, figDir='./figs/swLR/', figName=dataName+'_'+model)\n",
     "\n",
     "# To estimate which LR to use for further analyses\n",
@@ -419,7 +423,7 @@
    "outputs": [],
    "source": [
     "### Plot response examples\n",
-    "saveFlag=True; LR_index = 4; model = 'metFB2'; layer=2\n",
+    "saveFlag=True; LR_index = 4; model = 'proFB2'; layer=2\n",
     "# Load data\n",
     "experiment = 'swLR'; key = 'loadResp'; dataName = 'respSave11113'\n",
     "r = esn_feedback_ana(key,modName=model,expName=experiment,dataName=dataName,selectLR=LR_index,maxNSeeds=1,layer=layer)\n",
@@ -447,10 +451,10 @@
    "outputs": [],
    "source": [
     "### Plot results summary for all models\n",
-    "key = 'allSI'; prefix='metFB'\n",
-    "si = esn_feedback_ana(key, prefix=prefix, lr_index=4, layer=2)\n",
+    "key = 'allSI'; layer = 1; prefix='proFB'\n",
+    "si = esn_feedback_ana(key, prefix=prefix, lr_index=4, layer=layer)\n",
     "key = 'plotAllSI'; figDir='./figs/swLR'\n",
-    "esn_feedback_ana(key, si=si, figDir=figDir, prefix=prefix, saveFlag=True)\n",
+    "esn_feedback_ana(key, si=si, figDir=figDir, layer=layer, prefix=prefix, saveFlag=True)\n",
     "print(si)\n"
    ]
   },
@@ -492,7 +496,7 @@
    "outputs": [],
    "source": [
     "saveFlag = True\n",
-    "key = 'plotDW'; model = 'metFB2'; experiment = 'swLR'\n",
+    "key = 'plotDW'; model = 'FB2'; experiment = 'swLR'\n",
     "esn_feedback_ana(key, saveFlag=saveFlag, modName=model, expName=experiment, figDir='./figs/swLR/', layer=1, time=-1)"
    ]
   }
