Save output weights after transfer learning. Analyse accuracy of multiple transfer instances.

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "GWXIPFSI_Ynd",
       "metadata": {
         "colab": {
@@ -852,6 +852,7 @@
         "    outL_val = []\n",
         "    outA_valTa = []\n",
         "    outA_valClCe = []\n",
+        "    wTran = []\n",
         "\n",
         "    for m in range(par.nTransferRuns):\n",
         "        print(f'**********************START TRANSFER TRAINING {m+1} of {par.nTransferRuns}')\n",
@@ -979,7 +980,9 @@
         "                t=time.time()\n",
         "                \n",
         "                print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
-        "                print(f'Progress:                                                                                           Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
+        "                print(f'Progress:                                                                               Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
+        "        \n",
+        "        wTran[m] = [torch.clone(MOD.Ws[-1]).cpu().numpy(), torch.clone(MOD.bs[-1]).cpu().numpy()]\n",
         "\n",
         "    ### Save outputs\n",
         "    torch.save(L_tr, outputDir + '/' + 'lossTr'+str(rngSeed)+'.pt')\n",
@@ -998,6 +1001,7 @@
         "    torch.save(outRESP, outputDir + '/' + 'out_respSave'+str(rngSeed)+'.pt')\n",
         "    torch.save(MOD, outputDir + '/' + 'model'+str(rngSeed)+'.pt')\n",
         "    torch.save(savDW, outputDir + '/' + 'dw'+str(rngSeed)+'.pt')\n",
+        "    torch.save(wTran, outputDir + '/' + 'wTran'+str(rngSeed)+'.pt')\n",
         "    if par.saveFlag_FBWeights:\n",
         "        torch.save(savWeights, outputDir + '/' + 'weightSave'+str(rngSeed)+'.pt')\n",
         "\n",
@@ -1844,7 +1848,7 @@
         "    par.etaInitial = swLR[0]\n",
         "    par.fbLayer = 2\n",
         "    par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
-        "    par.nTransferRuns = 5\n",
+        "    par.nTransferRuns = 10\n",
         "    expName = 'FB2_LocMin'\n",
         "    complete[j, k] = xent_esn_fb(expName, sd)\n",
         "    print(f'k={k}/{len(seeds)}')\n",
@@ -2206,9 +2210,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python [conda env:venv] *",
+      "display_name": "venv",
       "language": "python",
-      "name": "conda-env-venv-py"
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.16"
     }
   },
   "nbformat": 4,
