--- a/esn_feedback_ana.ipynb
+++ b/esn_feedback_ana.ipynb
@@ -22,6 +22,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "modName = 'FB2'\n",
+    "expName = 'LocMin'\n",
+    "dataName = 'out_accValTa'\n",
+    "baseDirName = '/home/jb739/sheffield/proj/esn_feedback/data/'+modName+'_'+expName\n",
+    "dirNames = gl.glob(baseDirName); dirNames.sort()\n",
+    "# complete = torch.load('/home/jb739/sheffield/proj/esn_feedback/data/'+modName+'_'+expName+'/complete.pt') \n",
+    "# nLR = complete.shape[0]\n",
+    "data = []; nRuns = []\n",
+    "for j,dirName in enumerate(dirNames): # loop over learning rates\n",
+    "    # runs = complete[j,:]>0 # Boolean vector of which runs completed\n",
+    "    # nRuns.append(np.sum(runs.long().numpy())) # Number of completed runs\n",
+    "    data.append([])\n",
+    "    # if nRuns[j]>0:  # If there are any runs, do:\n",
+    "    fileNames = gl.glob(dirName+'/'+dataName+'*'); fileNames.sort()\n",
+    "    for k, fileName in enumerate(fileNames): # loop over runs (random seeds)\n",
+    "        data[j].append(torch.load(fileName))\n",
+    "\n",
+    "modName = 'FB2'\n",
+    "expName = 'swLR'\n",
+    "dataName = 'out_accValTa'\n",
+    "baseDirName = '/home/jb739/sheffield/proj/esn_feedback/data/'+modName+'_'+expName\n",
+    "dirNames = gl.glob(baseDirName+'_*'); dirNames.sort()\n",
+    "complete = torch.load('/home/jb739/sheffield/proj/esn_feedback/data/'+modName+'_'+expName+'_0/complete.pt') \n",
+    "nLR = complete.shape[0]\n",
+    "datam = []; nRuns = []\n",
+    "j = 4; dirName = dirNames[j]\n",
+    "fileNames = gl.glob(dirName+'/'+dataName+'*'); fileNames.sort()\n",
+    "temp = torch.load(fileNames[0])                \n",
+    "datam.append(np.expand_dims(np.array(torch.load(fileNames[0])), axis=1))\n",
+    "for k in range(1,len(fileNames)): # loop over runs (random seeds)\n",
+    "    datam[0] = np.concatenate((datam[0], np.expand_dims(np.array(torch.load(fileNames[k])), axis=1)), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu.setupMatplotlib()\n",
+    "kernel = np.ones(50)/50\n",
+    "nEpochs = data[0][0][0].shape[0]\n",
+    "n = len(data[0][0])\n",
+    "fig = pl.figure(figsize=tuple(np.array((6.,4.))/2.54)); ax = pl.axes()\n",
+    "ax.spines[['top','right']].set_visible(False)\n",
+    "for j in range(n):\n",
+    "    pl.plot(np.linspace(1,nEpochs,nEpochs),1. - np.convolve(np.pad(data[0][0][j], (50,50), mode='edge'),kernel,mode='same')[50:-50], linewidth=1.0, color=np.array([j,j,j])/10.)\n",
+    "for j in range(datam[0].shape[1]):\n",
+    "    pl.plot(np.linspace(1,nEpochs,nEpochs),1. - np.convolve(np.pad(datam[0][:,j], (50,50), mode='edge'),kernel,mode='same')[50:-50], linewidth=1.0, color='g')\n",
+    "\n",
+    "ax.xaxis.set_ticks((0,nEpochs)); ax.set_yscale('log'); ax.yaxis.set_ticks([0.02,0.05,0.2,0.5]); ax.set_ylim(ymin=0.02, ymax=0.6)\n",
+    "ax.get_yaxis().set_major_formatter(mpl.ticker.ScalarFormatter())\n",
+    "pl.savefig('/home/jb739/sheffield/proj/esn_feedback/figs/swLR/acc_multiTransferLearning.svg', format=\"svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def esn_feedback_ana(key,**kwa):\n",
     "\n",
     "    ### Load accuracy data\n",
