--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "GWXIPFSI_Ynd",
       "metadata": {
         "colab": {
@@ -982,7 +982,7 @@
         "                print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
         "                print(f'Progress:                                                                               Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
         "        \n",
-        "        wTran[m] = [torch.clone(MOD.Ws[-1]).cpu().numpy(), torch.clone(MOD.bs[-1]).cpu().numpy()]\n",
+        "        wTran.append([torch.clone(MOD.Ws[-1]).detach().cpu().numpy(), torch.clone(MOD.bs[-1]).detach().cpu().numpy()])\n",
         "\n",
         "    ### Save outputs\n",
         "    torch.save(L_tr, outputDir + '/' + 'lossTr'+str(rngSeed)+'.pt')\n",
@@ -1850,11 +1850,9 @@
         "    par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
         "    par.nTransferRuns = 10\n",
         "    expName = 'FB2_LocMin'\n",
-        "    complete[j, k] = xent_esn_fb(expName, sd)\n",
+        "    complete = xent_esn_fb(expName, sd)\n",
         "    print(f'k={k}/{len(seeds)}')\n",
         "    print(f'*************************FB2_LocMin Run time: {time.time()-t}')\n",
-        "completeName = directory+'/data/FB2_LocMin/complete.pt'\n",
-        "torch.save(complete, completeName)\n",
         "\n",
         "print('*******************************FINISHED FB2********************************')\n"
       ]
@@ -2210,9 +2208,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "Python [conda env:venv] *",
       "language": "python",
-      "name": "python3"
+      "name": "conda-env-venv-py"
     },
     "language_info": {
       "codemirror_mode": {
