Add analyses of multiple transfer instances. Use two layers on top of trained hiddne layers for transfer learning.

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -1652,6 +1652,9 @@
         "swLR = np.logspace(-5,-7/3,7) # Sweep over these learning rates\n",
         "nSeeds = 5 # No. runs per hyperparameter\n",
         "seeds = list(sp.primerange(11111,33333))[0:nSeeds] # RNG seeds\n",
+        "modName = 'out2FB2'\n",
+        "expiment = 'swLR'\n",
+        "expNameSuffix = modName+'_'+experiment+'_'\n",
         "\n",
         "complete = torch.zeros((len(swLR), len(seeds)))\n",
         "for j, lr in enumerate(swLR):\n",
@@ -1666,15 +1669,17 @@
         "        par.etaInitial = swLR[j]\n",
         "        par.fbLayer = 2\n",
         "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
-        "        expName = 'FB2_swLR_'+str(j)\n",
-        "        complete[j, k] = xent_esn_fb(expName, sd)\n",
+        "        expName = modName+'_'+experiment+'_'+str(j)\n",
+        "        expName = expNameSuffix+str(j)\n",
         "        print(f'j={j}/{len(swLR)};     k={k}/{len(seeds)}')\n",
         "        print(f'*************************FB2 Run time: {time.time()-t}')\n",
-        "completeName = directory+'/data/FB2_swLR_0/complete.pt'\n",
+        "completeName = directory+'/data/'+expNameSuffix+'0/complete.pt'\n",
         "torch.save(complete, completeName)\n",
         "\n",
         "print('*******************************FINISHED FB2********************************')\n",
         "\n",
+        "modName = 'out2FB1'\n",
+        "expNameSuffix = modName+'_'+experiment+'_'\n",
         "complete = torch.zeros((len(swLR), len(seeds)))\n",
         "for j, lr in enumerate(swLR):\n",
         "    for k, sd in enumerate(seeds):\n",
@@ -1688,15 +1693,17 @@
         "        par.etaInitial = swLR[j]\n",
         "        par.fbLayer = 1\n",
         "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
-        "        expName = 'FB1_swLR_'+str(j)\n",
+        "        expName = expNameSuffix+str(j)\n",
         "        complete[j, k] = xent_esn_fb(expName, sd)\n",
         "        print(f'j={j}/{len(swLR)};     k={k}/{len(seeds)}')\n",
         "        print(f'*************************FB1 Run time: {time.time()-t}')\n",
-        "completeName = directory+'/data/FB1_swLR_0/complete.pt'\n",
+        "completeName = directory+'/data/'+expNameSuffix+'0/complete.pt'\n",
         "torch.save(complete, completeName)\n",
         "\n",
         "print('*******************************FINISHED FB1********************************')\n",
         "\n",
+        "modName = 'out2FB0'\n",
+        "expNameSuffix = modName+'_'+experiment+'_'\n",
         "complete = torch.zeros((len(swLR), len(seeds)))\n",
         "for j, lr in enumerate(swLR):\n",
         "    for k, sd in enumerate(seeds):\n",
@@ -1710,11 +1717,11 @@
         "        par.etaInitial = swLR[j]\n",
         "        par.fbLayer = []\n",
         "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
-        "        expName = 'FB0_swLR_'+str(j)\n",
+        "        expName = expNameSuffix+str(j)\n",
         "        complete[j, k] = xent_esn_fb(expName, sd)\n",
         "        print(f'j={j}/{len(swLR)};     k={k}/{len(seeds)}')\n",
         "        print(f'*************************FB0 Run time: {time.time()-t}')\n",
-        "completeName = directory+'/data/FB0_swLR_0/complete.pt'\n",
+        "completeName = directory+'/data/'+expNameSuffix+'0/complete.pt'\n",
         "torch.save(complete, completeName)\n",
         "\n",
         "print('*******************************FINISHED FB0********************************')"
@@ -1740,7 +1747,9 @@
         "swLR = np.logspace(-5,-7/3,7) # Sweep over these learning rates\n",
         "nSeeds = 5 # No. runs per hyperparameter\n",
         "seeds = list(sp.primerange(11111,33333))[0:nSeeds] # RNG seeds\n",
-        "expNameSuffix = 'proFB2_swLR_'\n",
+        "experiment = 'swLR'\n",
+        "modName = 'out2triFB2'\n",
+        "expNameSuffix = modName+'_'+experiment+'_'\n",
         "complete = torch.zeros((len(swLR), len(seeds)))\n",
         "for j, lr in enumerate(swLR):\n",
         "    # if j!=0:\n",
@@ -1764,6 +1773,8 @@
         "\n",
         "print('*******************************FINISHED FB2********************************')\n",
         "\n",
+        "modName = 'out2triFB1'\n",
+        "expNameSuffix = modName+'_'+experiment+'_'\n",
         "expNameSuffix = 'proFB1_swLR_'\n",
         "complete = torch.zeros((len(swLR), len(seeds)))\n",
         "for j, lr in enumerate(swLR):\n",
@@ -1788,7 +1799,8 @@
         "\n",
         "print('*******************************FINISHED FB1********************************')\n",
         "\n",
-        "expNameSuffix = 'proFB0_swLR_'\n",
+        "modName = 'out2triFB0'\n",
+        "expNameSuffix = modName+'_'+experiment+'_'\n",
         "complete = torch.zeros((len(swLR), len(seeds)))\n",
         "for j, lr in enumerate(swLR):\n",
         "    # if j!=0:\n",
@@ -2208,20 +2220,12 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python [conda env:venv] *",
+      "display_name": "venv",
       "language": "python",
-      "name": "conda-env-venv-py"
+      "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
       "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
       "version": "3.8.16"
     }
   },
