--- a/esn_feedback_ana.ipynb
+++ b/esn_feedback_ana.ipynb
@@ -83,6 +83,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "w = torch.load('/home/jb739/sheffield/proj/esn_feedback/data/FB2_LocMin/wTran11113.pt')\n",
+    "mu.setupMatplotlib()\n",
+    "kernel = np.ones(50)/50\n",
+    "nEpochs = data[0][0][0].shape[0]\n",
+    "n = len(data[0][0])\n",
+    "fig = pl.figure(figsize=tuple(np.array((6.,4.))/2.54)); ax = pl.axes()\n",
+    "ax.spines[['top','right']].set_visible(False)\n",
+    "k=[4,7,5,9]\n",
+    "for d,j in enumerate(k):\n",
+    "    pl.plot(np.linspace(1,nEpochs,nEpochs),1. - np.convolve(np.pad(data[0][0][j], (50,50), mode='edge'),kernel,mode='same')[50:-50], linewidth=1.0, color=np.array([j,j,j])/10.)\n",
+    "ax.xaxis.set_ticks((0,nEpochs)); ax.set_yscale('log'); ax.yaxis.set_ticks([0.02,0.05,0.2,0.5]); ax.set_ylim(ymin=0.02, ymax=0.6)\n",
+    "ax.get_yaxis().set_major_formatter(mpl.ticker.ScalarFormatter())\n",
+    "\n",
+    "fig = pl.figure(figsize=tuple(np.array((25.,15.))/2.54)); ax = pl.axes()\n",
+    "ax.spines[['top','right']].set_visible(False)\n",
+    "pl.plot(w[5][0][:50,0]);pl.plot(w[9][0][:50,0]);pl.plot(w[0][0][:50,0])\n",
+    "# pl.plot(w[5][1]);pl.plot(w[9][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def esn_feedback_ana(key,**kwa):\n",
     "\n",
     "    ### Load accuracy data\n",
